# ping-pong

./: CMakeLists.txt  README.md
.cache/clangd/index/: SDL.c.A80CCFCEB436C492.idx  SDL_RLEaccel.c.53EFB2254B077E04.idx  SDL_RLEaccel_c.h.8E3FCF62028C249F.idx  SDL_assert.c.9D042C0647DE800D.idx  SDL_assert_c.h.5389E3F9FF201199.idx  SDL_atomic.c.42EF1D5F7087E60F.idx  SDL_audio.c.12647743A6C302DF.idx  SDL_audio_c.h.23E1ED977CA27FE6.idx  SDL_audio_channel_converters.h.44CE2C6DD2226FCE.idx  SDL_audio_resampler_filter.h.8DC2D3D64721F728.idx  SDL_audiocvt.c.C7C0C487E8201B45.idx  SDL_audiodev.c.CBA166CB796DF0F2.idx  SDL_audiotypecvt.c.7A63C8F9E13FC44C.idx  SDL_blendfillrect.c.C59F47A5606A84BA.idx  SDL_blendfillrect.h.1BF451BEDEAFCFBC.idx  SDL_blendline.c.FB04F45A19BDB543.idx  SDL_blendline.h.7F2FFEEDCCBAD1C6.idx  SDL_blendmode.h.59F1A19B6E674DD1.idx  SDL_blendpoint.c.3519145D93EDB668.idx  SDL_blendpoint.h.8377B253C0ED639C.idx  SDL_blit.c.A086CCB26E018360.idx  SDL_blit.h.6830806693B0D187.idx  SDL_blit_0.c.3C6898D641DF670F.idx  SDL_blit_1.c.35E93860D24A442D.idx  SDL_blit_A.c.FB9B5795E895F948.idx  SDL_blit_N.c.6D1F3FC7F040A4AD.idx  SDL_blit_auto.c.B110389CFF797EB9.idx  SDL_blit_auto.h.55B5CC2EA1640E44.idx  SDL_blit_copy.c.4245DE2E53A8F1D5.idx  SDL_blit_copy.h.6EB752E3DDDC3DF0.idx  SDL_blit_slow.c.C8B734605C77D343.idx  SDL_blit_slow.h.E4A39A595EA4F912.idx  SDL_bmp.c.611EBC617E8C3EB4.idx  SDL_clipboard.c.E9707C1C2F1BB684.idx  SDL_clipboardevents.c.61275901964EE768.idx  SDL_cocoaclipboard.h.9B567517F27DA3F8.idx  (+316 more)
ping-pong/: main.cpp
ping-pong.xcodeproj/: project.pbxproj
ping-pong/include/: Entity.hpp  Math.hpp  RenderWindow.hpp  Utils.hpp
ping-pong/src/: Entity.cpp  Math.cpp  RenderWindow.cpp  Utils.cpp  main.cpp
src/: entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  text.cpp  text.hpp  vector.cpp  vector.hpp
(+1 files in other folders)
